tests/cases/fail/tuple_union_type.p4
def main() -> None:
    value: (int,float) | int = (1, 2.5)
